[tool.poetry]
name = "maptiler-cloud-cli"
version = "1.1.1"
description = "CLI utility for MapTiler Cloud"
authors = ["MapTiler <info@maptiler.com>"]
packages = [{include = "maptiler", from = "src"}]
license = "MIT"
repository = "https://github.com/maptiler/maptiler-cloud-cli"
documentation = "https://docs.maptiler.com/cloud/admin-api/"
readme = "README.md"

[tool.poetry.scripts]
maptiler-cloud = "maptiler.cloud_cli:cli"

[tool.poetry.dependencies]
python = ">=3.6"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
