[tool.poetry]
name = "maptiler-cloud-cli"
version = "1.2.0"
description = "CLI utility for MapTiler Cloud"
authors = ["MapTiler <info@maptiler.com>"]
packages = [{ include = "maptiler", from = "src" }]
license = "MIT"
repository = "https://github.com/maptiler/maptiler-cloud-cli"
documentation = "https://docs.maptiler.com/cloud/admin-api/"
readme = "README.md"

[tool.poetry.scripts]
maptiler-cloud = "maptiler.cloud_cli:cli"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0"
requests = "^2.26"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pytest = "^7.0"
requests-mock = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
