[project]
name = "maptiler-cloud-cli"
version = "1.2.1"
description = "CLI utility for MapTiler Cloud"
authors = [{name = "MapTiler Developers", email = "developers@maptiler.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
repository = "https://github.com/maptiler/maptiler-cloud-cli"
documentation = "https://docs.maptiler.com/cloud/admin-api/"

[project.scripts]
maptiler-cloud = "maptiler.cloud_cli:cli"

[tool.poetry]
packages = [{ include = "maptiler", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0"
requests = "^2.26"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pytest = "^7.0"
requests-mock = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
